--- a/rebar.config
+++ b/rebar.config
@@ -3,4 +3,4 @@
             {i, ["include"]},
             {parse_transform, lager_transform} ]}.
 
-{deps, [{lager, {git, "git://github.com/basho/lager.git",   {tag, "3.6.1"}}} ]}.
+{deps, [{lager, {git, "git://github.com/erlang-lager/lager.git",    {tag, "3.6.1"}}} ]}.
