Use ssh protocol instead of discontinued git

--- a/rebar.config
+++ b/rebar.config
@@ -3,4 +3,4 @@
             {i, ["include"]},
             {parse_transform, lager_transform} ]}.
 
-{deps, [{lager, {git, "git://github.com/erlang-lager/lager.git",    {tag, "3.9.2"}}} ]}.
+{deps, [{lager, {git, "ssh://github.com/erlang-lager/lager.git",    {tag, "3.9.2"}}} ]}.
